<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="@dimen/double_padding"
    tools:context=".ui.about.AboutFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="168dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/single_padding"
            android:background="@drawable/about_timer"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextView.About.Title"
                android:contentDescription="@string/app_name"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/version"
                style="@style/TextView.About.Version"
                android:text="@string/about_version" />

            <TextView
                android:id="@+id/date"
                style="@style/TextView.About.Date"
                android:text="@string/about_date" />

            <TextView
                style="@style/TextView.About.Email"
                android:contentDescription="@string/mail_me"
                android:text="@string/my_email" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        style="@style/TextView.About.Header"
        android:contentDescription="@string/menu_about"
        android:text="@string/about_description_title" />

    <LinearLayout style="@style/LineSpacer" />

    <TextView
        style="@style/TextView.About.Description"
        android:contentDescription="@string/about_description"
        android:text="@string/about_description" />

    <TextView
        style="@style/TextView.About.Header"
        android:contentDescription="@string/about_guide_title"
        android:text="@string/about_guide_title" />

    <LinearLayout style="@style/LineSpacer" />

    <TextView
        style="@style/TextView.About.Description"
        android:contentDescription="@string/about_guide"
        android:text="@string/about_guide" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <TextView
            style="@style/TextView.About.Copyrights"
            android:contentDescription="@string/about_copyrights"
            android:text="@string/about_copyrights" />
    </LinearLayout>



</LinearLayout>