<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:api="http://schemas.android.com/tools"
    android:id="@+id/counter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/single_padding">

    <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        style="@style/CircularProgressIndicator"/>

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/TextView.Title"
            android:hint="@string/title_hint"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_start"
                style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
                android:layout_marginHorizontal="@dimen/button_margin_horizontal"
                android:paddingHorizontal="@dimen/button_padding_horizontal"
                android:text="@string/button_text_start"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pause"
                style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
                android:layout_marginHorizontal="@dimen/button_margin_horizontal"
                android:paddingHorizontal="@dimen/button_padding_horizontal"
                android:text="@string/button_text_pause"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_stop"
                style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
                android:layout_marginHorizontal="@dimen/button_margin_horizontal"
                android:paddingHorizontal="@dimen/button_padding_horizontal"
                android:text="@string/button_text_stop"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>