<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/single_padding">

    <TextView
        style="@style/TextView.Preferences.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences_title" />

    <LinearLayout style="@style/LineSpacer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView.Preferences.Description.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/preferences_keep_screen_on" />

        <Switch
            android:id="@+id/keepScreenOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView.Preferences.Description.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/preferences_repeat_counters" />

        <Switch
            android:id="@+id/unlimitedVoiceNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/unlimitedVoiceNotificationCounterLayout"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView.Preferences.Description"
            android:paddingStart="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/preferences_repeat_nums" />
        <Spinner
            android:id="@+id/repeatsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:entries="@array/repeatsList"/>

<!--        <EditText-->
<!--            android:id="@+id/repeatsNumber"-->
<!--            android:inputType="number"-->
<!--            android:text="5"-->
<!--            android:minWidth="50"-->
<!--            android:textAlignment="center"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content" />-->
    </LinearLayout>

</LinearLayout>